# rekur

./: README.md  dune-project  rekur.opam
example/: bool.kr  hello.kr  nat.kr
lib/: Checker.ml  Context.ml  Environment.ml  Eval.ml  Grammar.mly  Lexer.mll  Parser.ml  Range.ml  Reporter.ml  Syntax.ml  dune
test/: dune
